--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@react-three/fiber": "^9.3.0",
     "@react-three/rapier": "^2.1.0",
     "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.23.12",
     "meshline": "^3.3.1",
-    "motion": "^12.23.12",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
