--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@react-three/rapier": "^1.5.0",
     "@tailwindcss/postcss": "^4.1.12",
     "autoprefixer": "^10.4.21",
-    "framer-motion": "^11.0.24",
+    "framer-motion": "^11.18.2",
     "meshline": "^3.3.0",
+    "motion": "^12.23.12",
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
